main/bin/main.24114.temp/main.log
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:75:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:252:57: error: use of undeclared identifier 'infect_typeinfect_type'
                            infection_buf.infect_type = infect_typeinfect_type;
                                                        ^
1 warning and 1 error generated.
